register installed cluster
