# restapi/operations/assisted_install_api.go
@@ -136,6 +136,9 @@ func NewAssistedInstallAPI(spec *loads.Document) *AssistedInstallAPI {
 		InstallerRegisterHostHandler: installer.RegisterHostHandlerFunc(func(params installer.RegisterHostParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.RegisterHost has not yet been implemented")
 		}),
+		InstallerRegisterInstalledClusterHandler: installer.RegisterInstalledClusterHandlerFunc(func(params installer.RegisterInstalledClusterParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation installer.RegisterInstalledCluster has not yet been implemented")
+		}),
 		InstallerResetClusterHandler: installer.ResetClusterHandlerFunc(func(params installer.ResetClusterParams, principal interface{}) middleware.Responder {
 			return middleware.NotImplemented("operation installer.ResetCluster has not yet been implemented")
 		}),
@@ -274,6 +277,8 @@ type AssistedInstallAPI struct {
 	InstallerRegisterClusterHandler installer.RegisterClusterHandler
 	// InstallerRegisterHostHandler sets the operation handler for the register host operation
 	InstallerRegisterHostHandler installer.RegisterHostHandler
+	// InstallerRegisterInstalledClusterHandler sets the operation handler for the register installed cluster operation
+	InstallerRegisterInstalledClusterHandler installer.RegisterInstalledClusterHandler
 	// InstallerResetClusterHandler sets the operation handler for the reset cluster operation
 	InstallerResetClusterHandler installer.ResetClusterHandler
 	// InstallerUpdateClusterHandler sets the operation handler for the update cluster operation
@@ -461,6 +466,9 @@ func (o *AssistedInstallAPI) Validate() error {
 	}
 	if o.InstallerRegisterHostHandler == nil {
 		unregistered = append(unregistered, "installer.RegisterHostHandler")
+	}
+	if o.InstallerRegisterInstalledClusterHandler == nil {
+		unregistered = append(unregistered, "installer.RegisterInstalledClusterHandler")
 	}
 	if o.InstallerResetClusterHandler == nil {
 		unregistered = append(unregistered, "installer.ResetClusterHandler")
@@ -701,6 +709,10 @@ func (o *AssistedInstallAPI) initHandlerCache() {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
 	o.handlers["POST"]["/clusters/{cluster_id}/hosts"] = installer.NewRegisterHost(o.context, o.InstallerRegisterHostHandler)
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/installed_clusters"] = installer.NewRegisterInstalledCluster(o.context, o.InstallerRegisterInstalledClusterHandler)
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
