# swagger.yaml
@@ -1570,6 +1570,31 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
+  /installed_clusters:
+    post:
+      tags:
+        - installer
+      summary: Register an installed OpenShift cluster.
+      operationId: RegisterInstalledCluster
+      parameters:
+        - in: body
+          name: new-installed-cluster-params
+          required: true
+          schema:
+            $ref: '#/definitions/installed-cluster-create-params'
+      responses:
+        201:
+          description: Success.
+          schema:
+            $ref: '#/definitions/cluster'
+        400:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+        500:
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
 
 definitions:
   list-managed-domains:
@@ -2036,6 +2061,29 @@ definitions:
               format: uuid
             hostname:
               type: string
+
+  installed-cluster-create-params:
+    type: object
+    required:
+      - id
+      - name
+      - console_url
+      - openshift_version
+    properties:
+      id:
+        type: string
+        format: uuid
+        description: Unique identifier of the object.
+      name:
+        type: string
+        description: Name of the OpenShift cluster.
+      console_url:
+        type: string
+        description: The console URL of the node.
+      openshift_version:
+        type: string
+        enum: ['4.5', '4.6']
+        description: Version of the OpenShift cluster.
 
   cluster:
     type: object
